Import page: don't allow import of private projects if not allowed

--- a/readthedocsext/theme/templates/projects/partials/project_create_automatic.html
+++ b/readthedocsext/theme/templates/projects/partials/project_create_automatic.html
@@ -242,7 +242,7 @@
           <input type="hidden" name="remote_repository" data-bind="value: pk" />
           <input type="hidden" name="default_branch" data-bind="value: default_branch" />
 
-          <button class="ui primary button" data-bind="css: {disabled: !admin}">{% trans "Continue" %}</button>
+          <button class="ui primary button" data-bind="css: {disabled: (!admin || !$parent.is_repository_supported($data))}">{% trans "Continue" %}</button>
         </form>
       </span>
     </div>
