--- a/readthedocsext/theme/templates/projects/partials/project_create_automatic.html
+++ b/readthedocsext/theme/templates/projects/partials/project_create_automatic.html
@@ -27,7 +27,9 @@
 {% block project_add_automatic_search %}
   <div class="ui small error message"
        data-bind="visible: error"
-       style="display: none">{% trans "There was an error while syncing your remote repositories" %}</div>
+       style="display: none">
+    {% trans "There was an error while syncing your remote repositories" %}
+  </div>
 
   {# Search prompt and dropdown #}
   <label>{% trans "Repository name:" %}</label>
@@ -242,7 +244,10 @@
           <input type="hidden" name="remote_repository" data-bind="value: pk" />
           <input type="hidden" name="default_branch" data-bind="value: default_branch" />
 
-          <button class="ui primary button" data-bind="css: {disabled: (!admin || !$parent.is_repository_supported($data))}">{% trans "Continue" %}</button>
+          <button class="ui primary button"
+                  data-bind="css: {disabled: (!admin || !$parent.is_repository_supported($data))}">
+            {% trans "Continue" %}
+          </button>
         </form>
       </span>
     </div>
