--- a/readthedocsext/theme/templates/projects/partials/project_create_automatic.html
+++ b/readthedocsext/theme/templates/projects/partials/project_create_automatic.html
@@ -1,5 +1,4 @@
-{% load static %}
-{% load i18n %}
+{% load trans blocktrans from i18n %}
 
 {% comment rst %}
   Project automatic configuration view
