--- a/readthedocsext/theme/templates/includes/header.html
+++ b/readthedocsext/theme/templates/includes/header.html
@@ -50,7 +50,7 @@ active_item
         <div class="five wide mobile only right aligned column">
           <div class="ui wide dropdown"
                data-bind="semanticui: {dropdown: {action: 'select'}}">
-            {# Ignore "aboid inline styles" rule #}
+            {# Ignore "avoid inline styles" rule #}
             {# djlint:off H021 #}
             <i class="fad fa-bars large icon" style="--fa-secondary-opacity: 0.8;"></i>
             {# djlint:on #}
