Some docs on stylesheets and update linting fix to KO hidden pattern
This adds some more documentation sourced from our theme styles,
including the pattern we've been using to replace the Knockout
``visible`` binding with a pattern that doesn't need inline styles.

--- a/readthedocsext/theme/templates/includes/header.html
+++ b/readthedocsext/theme/templates/includes/header.html
@@ -50,7 +50,7 @@ active_item
         <div class="five wide mobile only right aligned column">
           <div class="ui wide dropdown"
                data-bind="semanticui: {dropdown: {action: 'select'}}">
-            {# Ignore "avoid inline styles" rule #}
+            {# Ignore "avoid inline styles" rule. Don't use this hack, this should eventually be a CSS rule instead. #}
             {# djlint:off H021 #}
             <i class="fad fa-bars large icon" style="--fa-secondary-opacity: 0.8;"></i>
             {# djlint:on #}
