Link to docs when project is private

--- a/readthedocsext/theme/templates/projects/partials/project_create_automatic.html
+++ b/readthedocsext/theme/templates/projects/partials/project_create_automatic.html
@@ -163,7 +163,9 @@
                   </p>
                   <p class="ui red text"
                      data-bind="visible: !$parent.is_repository_supported($data)">
-                    <a class="ui red mini basic button">{% trans "Read more" %}</a>
+                    <a class="ui red mini basic button"
+                       href="https://docs.readthedocs.com/platform/stable/commercial/"
+                       target="_blank">{% trans "Read more" %}</a>
                   </p>
                 </div>
               </div>
