--- a/readthedocsext/theme/templates/projects/integration_list.html
+++ b/readthedocsext/theme/templates/projects/integration_list.html
@@ -21,7 +21,7 @@
         <div class="header">{% trans "No further configuration needed" %}</div>
         <p>
           {% blocktrans trimmed %}
-            This project is already configured to use the <a href="https://readthedocs-landing--12114.org.readthedocs.build/platform/12114/reference/git-integration.html#github-app">GitHub App integration</a>.
+            This project is already configured to use the <a href="https://docs.readthedocs.com/platform/stable/reference/git-integration.html#github-app">GitHub App integration</a>.
             You don't need to configure any other integrations.
           {% endblocktrans %}
         </p>
