Remove corporate templatetag (#593)
This templatetag isn't used at all

Ref https://github.com/readthedocs/readthedocs-corporate/pull/1993

--- a/readthedocsext/theme/templates/organizations/settings/sso_edit.html
+++ b/readthedocsext/theme/templates/organizations/settings/sso_edit.html
@@ -1,11 +1,7 @@
 {% extends "organizations/settings/base.html" %}
 
-{% load i18n %}
-{% load crispy_forms_tags %}
-
-{% load corporate %}
-{% load ext_theme_tags %}
-{% load organizations %}
+{% load trans blocktrans from i18n %}
+{% load as_crispy_field from crispy_forms_tags %}
 
 {% block title %}
   {{ organization.name }} - {% trans "Authorization" %}
@@ -32,7 +28,9 @@
   {% if organization.ssointegration %}
     <div class="ui message">
       <div class="header">{% trans "Invite users into your organization" %}</div>
-      <p>{% trans "You can invite people to join your organization by sending them this link:" %}</p>
+      <p>
+        {% trans "You can invite people to join your organization by sending them this link:" %}
+      </p>
 
       <div class="ui fluid action input">
         <input type="text"
@@ -112,7 +110,9 @@
         {% alter_field form.provider data_bind="valueInit: provider, value: provider" %}
         {{ form.provider | as_crispy_field }}
 
-        <div class="ko hidden" data-bind="css: { hidden: !use_domain() }">{{ form.domain | as_crispy_field }}</div>
+        <div class="ko hidden" data-bind="css: { hidden: !use_domain() }">
+          {{ form.domain | as_crispy_field }}
+        </div>
 
         <div class="ui warning message ko hidden"
              data-bind="css: { hidden: !show_warning() }">
