Import template tag

--- a/readthedocsext/theme/templates/organizations/settings/sso_edit.html
+++ b/readthedocsext/theme/templates/organizations/settings/sso_edit.html
@@ -1,5 +1,6 @@
 {% extends "organizations/settings/base.html" %}
 
+{% load alter_field from ext_theme_tags %}
 {% load trans blocktrans from i18n %}
 {% load as_crispy_field from crispy_forms_tags %}
 
