--- a/readthedocsext/theme/templates/profiles/partials/token_list.html
+++ b/readthedocsext/theme/templates/profiles/partials/token_list.html
@@ -1,10 +1,6 @@
 {% extends "includes/crud/table_list.html" %}
 
-{% load i18n %}
-
-{% load core_tags %}
-{% load privacy_tags %}
-{% load projects_tags %}
+{% load blocktrans trans from i18n %}
 
 {% block top_left_menu_items %}
 {% endblock top_left_menu_items %}
@@ -16,7 +12,9 @@
   {% endcomment %}
   <form method="post" action="{% url "profiles_tokens_create" %}">
     {% csrf_token %}
-    <button class="ui green {% if objects %}disabled{% endif %}button">{% trans "Generate API token" %}</button>
+    <button class="ui green {% if objects %}disabled{% endif %} button">
+      {% trans "Generate API token" %}
+    </button>
   </form>
 {% endblock create_button %}
 
