--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -7,7 +7,7 @@
 
     {# Hide weird spaces in title #}
     {# djlint:off #}
-    <title>{% block title %}{% endblock title %}{% block head_title %}{% endblock head_title %} - Read the Docs</title>
+    <title>{% block title %}{% endblock title %}{% block head_title %}{% endblock head_title %} - Read the Docs{% if PRODUCTION_DOMAIN == "readthedocs.org" }} Community {% elif PRODUCTION_DOMAIN == "readthedocs.com" %} Business {% endif%}</title>
     {# djlint:on #}
 
     {% block head_meta %}
