--- a/readthedocsext/theme/templates/profiles/private/migrate_to_gh_app.html
+++ b/readthedocsext/theme/templates/profiles/private/migrate_to_gh_app.html
@@ -77,7 +77,7 @@
           <div class="ui basic segment">
             {% if step == "overview" %}
               <p>
-                {% blocktrans trimmed with blog_post="#" %}
+                {% blocktrans trimmed with blog_post="https://about.readthedocs.com/blog/2025/06/announcing-our-github-app-beta/" %}
                   We’re introducing a new GitHub App to replace our old GitHub OAuth app.
                   This new app offers more granular permissions and better GitHub integration.
                   Learn more in our <a href="{{ blog_post }}">blog post</a>.
@@ -169,7 +169,7 @@
               {% if installation_target_groups %}
                 <div class="ui message info">
                   <i class="fad fa-info-circle icon"></i>
-                  {% blocktrans trimmed with manual_migration_docs="#" %}
+                  {% blocktrans trimmed with manual_migration_docs="https://docs.readthedocs.com/platform/stable/reference/git-integration.html#manually-migrating-a-project" %}
                     If you skip installation during migration, you will need to <a href="{{ manual_migration_docs }}">manually migrate</a> your project to keep it working.
                   {% endblocktrans %}
                 </div>
@@ -227,7 +227,7 @@
               {% if has_projects_pending_migration and not step_revoke_completed %}
                 <div class="ui small warning message">
                   <i class="fad fa-warning icon"></i>
-                  {% blocktrans trimmed with migrate_step="?step=migrate" manual_migration_docs="#" %}
+                  {% blocktrans trimmed with migrate_step="?step=migrate" manual_migration_docs="https://docs.readthedocs.com/platform/stable/reference/git-integration.html#manually-migrating-a-project" %}
                     You have projects that need to be <a href="{{ migrate_step }}">migrated</a>.
                     If you revoke access now, you'll need to <a href="{{ manual_migration_docs }}">manually migrate</a> them.
                   {% endblocktrans %}
@@ -248,7 +248,7 @@
 
               <div class="ui message info">
                 <i class="fad fa-info-circle icon"></i>
-                {% blocktrans trimmed with manual_migration_docs="#" %}
+                {% blocktrans trimmed with manual_migration_docs="https://docs.readthedocs.com/platform/stable/reference/git-integration.html#manually-migrating-a-project" %}
                   After disconnecting the old GitHub OAuth app, you won't be able to see this page again.
                   If you have projects that need to be migrated, you'll need to <a href="{{ manual_migration_docs }}">manually migrate</a> them.
                 {% endblocktrans %}
