--- a/readthedocsext/theme/templates/profiles/private/migrate_to_gh_app.html
+++ b/readthedocsext/theme/templates/profiles/private/migrate_to_gh_app.html
@@ -193,8 +193,7 @@
                   <h3 class="ui small header">{% trans "Migrate all projects" %}</h3>
                   <p>
                     {% blocktrans trimmed %}
-                      You can also migrate all projects at once if you don't need to manually review migration for each project.
-                      Note that projects with warnings will not be migrated.
+                      Not all projects may be migrated automatically, you might need to take additional steps for some projects.
                     {% endblocktrans %}
                   </p>
 
