--- a/readthedocsext/theme/templates/socialaccount/partials/social_account_list.html
+++ b/readthedocsext/theme/templates/socialaccount/partials/social_account_list.html
@@ -1,16 +1,14 @@
 {% extends "includes/crud/table_list.html" %}
 
-{% load i18n %}
-{% load gravatar %}
+{% load blocktrans trans from i18n %}
 {% load can_be_disconnected from readthedocs.socialaccounts %}
 
-{% load core_tags %}
-{% load privacy_tags %}
-{% load projects_tags %}
-{% load ext_theme_tags %}
+{% load get_account_username from ext_theme_tags %}
 
 {% block top_menu %}
-  {% if form.non_field_errors %}<div class="ui error message">{{ form.non_field_errors }}</div>{% endif %}
+  {% if form.non_field_errors %}
+    <div class="ui error message">{{ form.non_field_errors }}</div>
+  {% endif %}
   {{ block.super }}
 {% endblock top_menu %}
 {% block top_left_menu_items %}
@@ -18,7 +16,9 @@
 
 {% block create_button %}
   <div class="ui green button"
-       data-bind="click: $root.show_modal('socialaccount-connections')">{% trans "Add new connection" %}</div>
+       data-bind="click: $root.show_modal('socialaccount-connections')">
+    {% trans "Add new connection" %}
+  </div>
 {% endblock create_button %}
 
 {% block list_placeholder_icon_class %}
@@ -73,11 +73,10 @@
 {% endblock list_item_header %}
 
 {% block list_item_meta_items %}
-  {% with object.get_provider_account as provider %}
+  {% with object.get_provider as provider %}
     <span class="ui label">
-      {# get_brand.name|lower here because we can't use `id`, `Bitbucket2Provider.id == 'bitbucket_oauth2'` #}
-      <i class="fa-brands fa-{{ provider.get_brand.name|lower }} icon"></i>
-      {{ provider.get_brand.name }}
+      <i class="fa-brands fa-{{ provider.name|lower }} icon"></i>
+      {{ provider.app.name|default:provider.name }}
     </span>
   {% endwith %}
 {% endblock list_item_meta_items %}
