--- a/readthedocsext/theme/templates/profiles/private/migrate_to_gh_app.html
+++ b/readthedocsext/theme/templates/profiles/private/migrate_to_gh_app.html
@@ -193,7 +193,7 @@
                   <h3 class="ui small header">{% trans "Migrate all projects" %}</h3>
                   <p>
                     {% blocktrans trimmed %}
-                      Not all projects may be migrated automatically, you might need to take additional steps for some projects.
+                      You might need to take additional steps for some projects that can't be migrated automatically.
                     {% endblocktrans %}
                   </p>
 
